fix btcpay inputs invisible in dark mode

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -91,3 +91,7 @@ a.card:hover {
     margin-right: 0 !important;
   }
 }
+
+[data-theme='dark'] .btcpay-input-price, .plus-minus {
+  color: #000!important;
+}
